cloud-infrastructure/modules/environment/security_groups.tf
resource "aws_security_group" "load_balancer" {
  name_prefix = "${var.environment_name}-load-balancer"
  description = "${var.environment_name} load balancer security group"

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
